--- a/template.html
+++ b/template.html
@@ -94,12 +94,30 @@
     </section><!--/#conatcat-info-->
 
   
-    <footer id="footer" class="midnight-blue">
+   <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
-                    &copy; 2016 <a target="_blank" href="#">Pioneer Corporate</a>. All Rights Reserved.
+                <div class="col-sm-6 col-md-4">
+                    <h5>Information</h5>
+                    <ul class="info">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Tools</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <h5>Our Corporate Office</h5>
+                <address>
+                    <strong>Pioneer Corporate</strong><br>
+                    291 Franklin Ave<br>
+                    Wyckoff, NJ 07481<br>
+                </address>
+                </div>     
+                <div class="col-sm-6 col-md-4">
                     <div class="social">
+                        <h5>Follow Us</h5>
                             <ul class="social-share">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -110,16 +128,19 @@
                             
                        </div>
                 </div>
-                <div class="col-sm-6">
-                    <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Tools</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
+                
+            </div>
+        </div>
+        <div class="sub-footer">
+            <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="text-left">
+                    <p> &copy; 2016 <a target="_blank" href="#">Pioneer Corporate</a>. All Rights Reserved.</p>
                 </div>
             </div>
+        </div>  
+    </div>
         </div>
     </footer><!--/#footer-->
 
