--- a/contact-us.html
+++ b/contact-us.html
@@ -152,13 +152,6 @@
             </div>
         </div>
     </section>
-    <section id="contact-page">
-        <div class="container">
-             
-           
-        </div><!--/.container-->
-    </section>
-
    
     <section id="conatcat-info">
         <div class="container">
@@ -196,8 +189,8 @@
                     <h5>Our Corporate Office</h5>
                 <address>
                     <strong>Pioneer Corporate</strong><br>
-                    291 Franklin Ave<br>
-                    Wyckoff, NJ 07481<br>
+                    Blk 624, Bedok Reservoir Road<br>
+                    #02-1556, Singapore 470624<br>
                 </address>
                 </div>     
                 <div class="col-sm-6 col-md-4">
