--- a/about-us.html
+++ b/about-us.html
@@ -164,8 +164,8 @@
                     <h5>Our Corporate Office</h5>
                 <address>
                     <strong>Pioneer Corporate</strong><br>
-                    291 Franklin Ave<br>
-                    Wyckoff, NJ 07481<br>
+                    Blk 624, Bedok Reservoir Road<br>
+                    #02-1556, Singapore 470624<br>
                 </address>
                 </div>     
                 <div class="col-sm-6 col-md-4">
