--- a/template.html
+++ b/template.html
@@ -94,21 +94,16 @@
     </section><!--/#conatcat-info-->
 
   
-   <footer id="footer" class="midnight-blue">
+  <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-4">
-                    <h5>Information</h5>
-                    <ul class="info">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Tools</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
+                    <h5>PIONEER</h5>
+                    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna</P>
+                    
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <h5>Our Corporate Office</h5>
+                    <h5>CONTACT US</h5>
                  <address>
                     <strong>Pioneer Corporate</strong><br>
                     Blk 624, Bedok Reservoir Road<br>
@@ -117,7 +112,7 @@
                 </div>     
                 <div class="col-sm-6 col-md-4">
                     <div class="social">
-                        <h5>Follow Us</h5>
+                        <h5>FOLLOW US</h5>
                             <ul class="social-share">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -135,8 +130,15 @@
             <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <div class="text-left">
-                    <p> &copy; 2016 <a target="_blank" href="#">Pioneer Corporate</a>. All Rights Reserved.</p>
+                <div class="text-center">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="tools.html">Tools</a></li>
+                       <li><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                    <p class="copyright"> &copy; 2016 <a target="_blank" href="#">Pioneer Corporate</a>. All Rights Reserved.</p>
                 </div>
             </div>
         </div>  
