Home page images
Home page images and tabs detail

--- a/services.html
+++ b/services.html
@@ -48,11 +48,11 @@
                             <a href="services.html">Services </a><i class="fa fa-angle-down"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="services-detail.html">Company Registration</a></li>
-                                <li><a href="#">Immigration</a></li>
-                                <li><a href="#">Tax and Accounting</a></li>
-                                <li><a href="#">Business Support</a></li>
-                                <li><a href="#">Offshore Incorporation</a></li>
-                                <li><a href="#">Switch to Pioneer</a></li>
+                                <li><a href="services-detail.html">Immigration</a></li>
+                                <li><a href="services-detail.html">Tax and Accounting</a></li>
+                                <li><a href="services-detail.html">Business Support</a></li>
+                                <li><a href="offshore-detail.html">Offshore Incorporation</a></li>
+                                <li><a href="services-detail.html">Switch to Pioneer</a></li>
                             </ul>
                         </li>
                         <li><a href="tools.html">Tools</a>
