--- a/offshore-detail.html
+++ b/offshore-detail.html
@@ -75,12 +75,12 @@
             <div class="row">
                 <div class="col-lg-2 col-md-2 col-sm-2 bhoechie-tab-menu">
               <div class="list-group">
-                <a href="#overview" class="list-group-item active text-center">
+                <a href="#overview" class="list-group-item active">
                   Overview
                 </a>
-                <a href="#view" class="list-group-item text-center">
+                <a href="#view" class="list-group-item">
                   View Pricing</a>
-                <a href="#package" class="list-group-item text-center">
+                <a href="#package" class="list-group-item">
                   Package Details
                 </a>
               </div>
