--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="features">
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-bullhorn"></i></a>
+                            <a href="#"><i class="fa fa-edit"></i></a>
                             <h2><a href="#">Company Registration</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
@@ -96,7 +96,7 @@
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-comments"></i></a>
+                            <a href="#"><i class="fa fa-cc-visa"></i></a>
                             <h2><a href="#">Imigration &amp; Work Visas</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
@@ -104,7 +104,7 @@
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-cloud-download"></i></a>
+                            <a href="#"><i class="fa fa-newspaper-o"></i></a>
                             <h2><a href="#">Tax &amp; Accounting</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
@@ -112,7 +112,7 @@
                 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-leaf"></i></a>
+                            <a href="#"><i class="fa fa-cogs"></i></a>
                             <h2><a href="#">Business Support</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
@@ -120,7 +120,7 @@
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-cogs"></i></a>
+                            <a href="#"><i class="fa fa-building-o"></i></a>
                             <h2><a href="#">Offshore Incorporation</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
@@ -128,7 +128,7 @@
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-heart"></i></a>
+                            <a href="#"><i class="fa fa-exchange"></i></a>
                             <h2><a href="#">Switch to Pioneer</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
