--- a/offshore-detail.html
+++ b/offshore-detail.html
@@ -11,7 +11,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -73,20 +72,19 @@
     <section class="page-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-2 col-md-2 col-sm-2 bhoechie-tab-menu">
-              <div class="list-group">
-                <a href="#overview" class="list-group-item active">
-                  Overview
-                </a>
-                <a href="#view" class="list-group-item">
-                  View Pricing</a>
-                <a href="#package" class="list-group-item">
-                  Package Details
-                </a>
-              </div>
-            </div>
-                <div class="col-sm-7 bhoechie-tab">
-                    <div id="overview" class="bhoechie-tab-content active">
+               
+                <div class="col-sm-9">
+                    <div class="tab-content">
+                    <div class="tab-header">
+                        <ul class="tabs">
+                           <li><a href="#overview" class="active"> Overview</a></li>
+                           <li><a href="#view" class="">View Pricing</a></li>
+                           <li><a href="#package" class="">Package Details</a> </li>
+                        </ul>
+                     </div>
+                    
+                        <div class="tab-inner">
+                    <div id="overview">
                     <h3 class="section-heading"> Overview</h3>
                         <p>While it may be a small nation-state, Singapore has distinguished itself in the Asia-Pacific region due to its accessibility, state-of-the-art infrastructure, pro-business government policies, attractive tax rates and political stability.</p><p>
 Whether you’re foreign, local, or representing your company that wishes to set up a company in Singapore, Rikvin, a one-stop Singapore corporate service provider, has friendly and knowledgeable team of Singapore company registration specialists who would be happy to advise you on how your business can benefit from the extensive range of pro-business policies, grants and tax concessions in Singapore. We will be happy to talk to you via telephone, email or a face to face consultation at our office, which is conveniently located in Singapore’s central business district</p>
@@ -102,16 +100,20 @@ Whether you’re foreign, local, or representing your company that wishes to set
                         <li>Assure data and asset security by employing the most advanced Internet Security technologies at all times.</li>
                      </ul>
                      </div>
-                     <div id="view" class="bhoechie-tab-content">
+
+
+                     <div id="view" class="">
                         <h3 class="section-heading"> View Pricing</h3>
                         <p>While it may be a small nation-state, Singapore has distinguished itself in the Asia-Pacific region due to its accessibility, state-of-the-art infrastructure, pro-business government policies, attractive tax rates and political stability.</p><p>
 Whether you’re foreign, local, or representing your company that wishes to set up a company in Singapore, Rikvin, a one-stop Singapore corporate service provider, has friendly and knowledgeable team of Singapore company registration specialists who would be happy to advise you on how your business can benefit from the extensive range of pro-business policies, grants and tax concessions in Singapore. We will be happy to talk to you via telephone, email or a face to face consultation at our office, which is conveniently located in Singapore’s central business district</p>
                      </div>
-                     <div id="package" class="bhoechie-tab-content">
+                     <div id="package" class="">
                         <h3 class="section-heading"> Package Details</h3>
                         <p>While it may be a small nation-state, Singapore has distinguished itself in the Asia-Pacific region due to its accessibility, state-of-the-art infrastructure, pro-business government policies, attractive tax rates and political stability.</p><p>
 Whether you’re foreign, local, or representing your company that wishes to set up a company in Singapore, Rikvin, a one-stop Singapore corporate service provider, has friendly and knowledgeable team of Singapore company registration specialists who would be happy to advise you on how your business can benefit from the extensive range of pro-business policies, grants and tax concessions in Singapore. We will be happy to talk to you via telephone, email or a face to face consultation at our office, which is conveniently located in Singapore’s central business district</p>
                      </div>   
+                     </div>
+                 </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="widget archieve">
