slider image and icons
Home page banner image and tabs

--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@
 
                 <div class="col-sm-6 col-md-4">
                    <div class="service-block">
-                      <h4 class="section-heading"><i class="fa fa-cc-visa"></i> Immigration &amp; Work Visas  </h4>
+                      <h4 class="section-heading"><i class="fa fa-list-alt"></i> Immigration &amp; Work Visas  </h4>
                      
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
