--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <a href="#"><i class="fa fa-cc-visa"></i></a>
+                            <a href="#"><i class="fa fa-list-alt"></i></a>
                             <h2><a href="#">Imigration &amp; Work Visas</a></h2>
                             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
                         </div>
